--- a/ygo_probablilites.ipynb
+++ b/ygo_probablilites.ipynb
@@ -100,7 +100,7 @@
     "])\n",
     "one_card_pv = nhypergeom.pmf(0, mydeck.size, total_one_card, 5)\n",
     "print(f\"All 1 card combos: {one_card_cards}\")\n",
-    "print(f\"You'll see a 1 card combo in {(1-one_card_pv)*100}% of hands\")\n"
+    "print(f\"You'll see a 1 card combo in {(1-one_card_pv)*100}% of hands\")"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "        p_0 = rv.pmf([0,0,5])\n",
     "        combos_calculated[combo] = 1 - (p_1 + p_2 + p_0)\n",
     "for combo, prob in combos_calculated.items():\n",
-    "    print(f\"You'll see {combo} in {prob*100}% of hands\")\n"
+    "    print(f\"You'll see {combo} in {prob*100}% of hands\")"
    ]
   },
   {
@@ -252,11 +252,7 @@
     "    p = sum([\n",
     "        rv.pmf([x,0,5-x]) for x in range(1,card.count+1)\n",
     "    ])\n",
-    "    print(f\"Chance to see hands with {card.name}, but nothing needed to play: {p*100}%\")\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n"
+    "    print(f\"Chance to see hands with {card.name}, but nothing needed to play: {p*100}%\")"
    ]
   },
   {
@@ -336,7 +332,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(f\"{len(bricks)} hands are bricks:\")"
    ]
   },
@@ -354,7 +349,6 @@
     }
    ],
    "source": [
-    "\n",
     "for brick in bricks:\n",
     "    print(brick)"
    ]
